--- a/client/res/values/strings.xml
+++ b/client/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <string name="app_name">The Movement</string>
+    <string name="app_name">daM0vM3NT</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">daM0vM3NT</string>
 
 </resources>
